[gd_scene load_steps=13 format=3 uid="uid://6mddbv307euw"]

[ext_resource type="Script" path="res://components/stateMachene.gd" id="1_7dxr0"]
[ext_resource type="Script" path="res://player/ship_player.gd" id="1_s4ia2"]
[ext_resource type="Script" path="res://player/node.gd" id="2_0ufj0"]
[ext_resource type="PackedScene" uid="uid://bjxohqhjakuty" path="res://player/camra.tscn" id="2_dnmph"]
[ext_resource type="Script" path="res://player/going_up_ship.gd" id="4_5s1mt"]
[ext_resource type="Script" path="res://player/falling_ship.gd" id="5_umswd"]
[ext_resource type="Script" path="res://player/idle_ship.gd" id="6_on02l"]
[ext_resource type="Script" path="res://player/jump_ship.gd" id="7_tl1av"]
[ext_resource type="Script" path="res://player/running_state.gd" id="9_ei2vd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vlw8v"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vev74"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eroyd"]

[node name="ShipPlayer" type="CharacterBody3D" node_paths=PackedStringArray("hand") groups=["SaveDataNeed"]]
script = ExtResource("1_s4ia2")
scene = "res://Players/ship_player/ship_player.tscn"
hand = NodePath("body/head/Hand")

[node name="body" type="Node3D" parent="."]

[node name="head" type="Node3D" parent="body"]

[node name="Camra" parent="body/head" instance=ExtResource("2_dnmph")]
script = null

[node name="interactionShapeCast3D" type="ShapeCast3D" parent="body/head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("SphereShape3D_vlw8v")
target_position = Vector3(0, -6, 0)
max_results = 2
collision_mask = 13

[node name="Hand" type="Node3D" parent="body/head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.02013)

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
mesh = SubResource("CapsuleMesh_vev74")
skeleton = NodePath("../..")

[node name="oneDown" type="RayCast3D" parent="body"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07614, 0)
collision_mask = 2

[node name="oneinfront" type="RayCast3D" parent="body"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.512842, -1.06146)
target_position = Vector3(0, -1.1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_eroyd")

[node name="stateMachene" type="Node" parent="." node_paths=PackedStringArray("curent_state", "this_thing")]
script = ExtResource("1_7dxr0")
curent_state = NodePath("idleShip")
this_thing = NodePath("..")

[node name="shipplayerwalkingState" type="Node" parent="stateMachene"]
script = ExtResource("2_0ufj0")

[node name="goingUpShip" type="Node" parent="stateMachene"]
script = ExtResource("4_5s1mt")

[node name="FallingShip" type="Node" parent="stateMachene"]
script = ExtResource("5_umswd")

[node name="idleShip" type="Node" parent="stateMachene"]
script = ExtResource("6_on02l")

[node name="jumpShip" type="Node" parent="stateMachene"]
script = ExtResource("7_tl1av")

[node name="runningState" type="Node" parent="stateMachene"]
script = ExtResource("9_ei2vd")
